@@ -1,5 +1,11 @@
 2012-09-08  kitone  <kitone@gna.org>
 
+	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
+	Changes the preference dialog source file so that it doesn't need gtk+ 3.0 and settles for version 2.16.
+	Patch by Tomas Partl <eltomito>.
+
+2012-09-08  kitone  <kitone@gna.org>
+
 	* src/Makefile.am:
 	* src/gui/checkbuttonwithmemory.cc:
 	* src/gui/checkbuttonwithmemory.h:
